--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,22 +10,23 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "baseline-browser-mapping": "^2.9.2",
     "clsx": "^2.1.1",
     "lucide-react": "^0.555.0",
     "next": "16.0.4",
-    "next-intl": "^4.5.6",
+    "next-intl": "^4.5.8",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.4",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.0.0",
     "typescript": "^5"
   }
 }
